Fix layout of map so opening drawer shrinks visible map
And it always take up whole width

--- a/src/routes/MapExplorer/MapDrawer/MapDrawer.scss
+++ b/src/routes/MapExplorer/MapDrawer/MapDrawer.scss
@@ -1,8 +1,5 @@
 .container {
-  height: calc(100vh - 55px);
-  position: fixed;
-  right: 0px;
-  top: 55px;
+  height: 100%;
   padding: 20px;
   background: white;
   width: 40%;
