--- a/src/routes/PrimaryLayout/PrimaryLayout.scss
+++ b/src/routes/PrimaryLayout/PrimaryLayout.scss
@@ -104,6 +104,12 @@ $drawer-z-index: 51;
   flex: 0 0 43%;
 }
 
+.center.map-view.collapsedState {
+  width: calc(100% - 68px);
+  max-width: calc(100% - 68px);
+  flex: 0 0 100%;
+}
+
 .center::-webkit-scrollbar {
   background-color:transparent;
   width: 5px;
@@ -162,11 +168,6 @@ $drawer-z-index: 51;
 
 .map-view .detail {
   max-width: 700px;
-}
-
-.map-view.collapsedState {
-  width: 100%;
-  flex: 0 0 100%;
 }
 
 .detail::-webkit-scrollbar {
